--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         rel="stylesheet">
 
     <script src="https://cdn.tailwindcss.com"></script>
-    <link rel="stylesheet" href="/index.css">
+    <link rel="stylesheet" href="index.css">
 
 </head>
 
